# s3-tui

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md
src/: app.rs  app_state.rs  events.rs  main.rs  s3.rs  utils.rs  widgets.rs
src/s3/: objects.rs  s3_profile.rs  s3_secret.rs
src/widgets/: main_menu.rs  profiles.rs  single_line_input.rs
src/widgets/main_menu/: buckets_widget.rs  file_tree.rs  files_progress_widget.rs  input_widget.rs  main_menu_widget.rs
src/widgets/main_menu/file_tree/: tree.rs  tree_node.rs  tree_widget.rs
src/widgets/profiles/: edit_profile_widget.rs  new_profile_widget.rs  profile_info.rs  profiles_widget.rs
